# pico-386

./: .gitignore  BYTECODE.md  LICENSE  Makefile  README.md  TODO_GC.md  flake.nix  i386-dos4gw.json  test.sh
docs/: PLAN_HIGHER_ORDER_BUILTINS.md
include/: builtins.h  cart.h  mem.h  p386_builtins.h  p386_bytecode.h  p386_layout.h  p386_obj.h  p386_value.h  p386_vm.h  pico386.h  pico8.h  rust.h  serial.h  test.h  vga.h
rust/: Cargo.toml
rust/core_crate/: Cargo.toml
rust/core_crate/src/: ast.rs  bytecode.rs  compiler.rs  disasm.rs  lib.rs  prelude.lua  preprocess.rs
rust/patches/peg-0.8.5/: Cargo.toml
rust/patches/peg-0.8.5/src/: lib.rs
rust/src/: ast.rs  bytecode.rs  compiler.rs  lib.rs
script/: fetch_carts.sh  resolve_rust_objs.py
src/: cart.c  crt_shim.c  main.c  mem.c  p386_builtins.c  p386_dispatch.asm  p386_layout.inc  p386_loader.c  p386_obj.c  p386_trig.inc  p8_compress.c  pico386.c  print.c  pxa_compress_snippets.c  serial.asm  serial.c  vga.asm  vga.c  vga.c.old
src/parser/: Makefile  lexer.lex  main.c  parser.y  syntax.p8
test/: CARTS.md  carts.manifest  test_compile.c  test_compress.c  test_main.c  test_obj.c  test_vga_main.c  test_vm.c  test_vm_main.c
tools/: gen_p386_layout.py  gen_trig_table.py  p386_layout.py
